# rag-app

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile.client
app/back-end/: README.md  alembic.ini  config.py  const.py  error.py  main.py
app/back-end/alembic/: env.py
app/back-end/alembic/versions/: 35410c2056a2_init_db.py
app/back-end/api/: blob.py  cache.py  chain.py  feedback.py  file_management.py  prompting.py  search.py  user.py  utils.py
app/back-end/crud/: feedback_crud.py  file_meta_crud.py  history_crud.py  user_crud.py
app/back-end/datastore/: datastore.py  factory.py
app/back-end/datastore/providers/: elasticsearch_datastore.py
app/back-end/db/: init_db.py
app/back-end/db/models/: feedback.py  file_meta.py  mixins.py  qa_history.py  user.py
app/back-end/evaluation/: evaluate.py
app/back-end/pydantic_schemas/: api.py  document.py  feedback.py  file_meta.py  qa_history.py  user.py
app/back-end/services/: chunks.py  date.py  external_api.py  file.py  openai.py  preprocess.py  translate.py
app/front-end/: .gitignore  README.md  app.py  next.config.js  package-lock.json  package.json
app/front-end/deployment/: nginx.default.conf
data_pipeline/: batch_pipeline.py  config.py  document.py  file_pipeline.py  index_template.json  init_vectordb.py  prompt.py  qa_pair_generation.py  sharepoint.py  vectorize.py
docs/: response_schema.json
tests/: api.rest  llms.py  test_google_search.py  test_hybrid.py  test_kafka.py  test_langchain_stream.py  test_stream.py
(+14 files in other folders)
