[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Jackson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
PyMuPDF = "^1.23.4"
requests = "^2.31.0"
langchain = "^0.0.304"
loguru = "^0.7.2"
pypdf = "^4.0"
arrow = "^1.2.3"
python-pptx = "^0.6.22"
docx2txt = "^0.8"
elasticsearch = "^8.10.0"
kafka = "^1.3.5"
uvicorn = "^0.23.2"
google-api-python-client = "^2.101.0"
python-multipart = "^0.0.6"
llama-index-core = "^0.10.51"
llama-index = "^0.10.51"
flake8 = "^7.1.0"
pre-commit-hooks = "^4.6.0"
streamlit = "^1.36.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
